# satsday

./: .env  .env_sample  .gitignore  Cargo.toml  ark.config.toml  ark.seed  build.rs  db.sqlite  justfile  local.config.toml  mainnet.config.toml  mainnet.just  mutiny.just  mutinynet.config.toml  signet.just
.sqlx/: query-0a50e0c30d411aedd1648863ec533a28975e960adfe5e432bf5713e62dff6316.json  query-1aef4b4d7c1bc98f1af0a4d83d9d8b677139d77739a8fef133ec8075be7559dc.json  query-2d69dcf98650711efedcfb8d294d9a087ca5b21c01b8ca38939fdb01051ed62f.json  query-3faf71643294d0710a4c2b82879fda51a6878854ed6b081dbcaf42f23bbaefa4.json  query-48801d8adfc1f7f668f5f35b1c29ae7ffd34cf4672158052841935b4c2c81369.json  query-5a4aca6f1070cef45e57657c50dd32495c02bf17ed5ac7c05b2c7e540f8d8605.json  query-5f7d9039139b3cf34d87d4248cb0d822662f8a64af8c69832a11916e5708a503.json  query-6078b7d254636f01a7fd8998ba5c3676b839d6c5227ed6aed90914f0d2b79000.json  query-68d9e52f80b32e8429ed3b094f877044bd79ce1d09bd9a2cb9277714c6b3eb3a.json  query-79fc1094a5a51725abb70f2a8cbd69f4b3b792cb07fb664aa3e19f5af349c7c0.json  query-8cf1eab8368ae90d72fa68a30e0dc80c726bf5ec25e7b044dd90f59b2338339c.json  query-9638d73cd8831095a8ad46fd12af776d86a59b787d938e139ccb5e23af9fbb8f.json  query-9818f9476703e371ca5b4c1f160458cc3af92ac6e4bf9c0cbf2c076d10f81c12.json  query-9b828d0782f3569a6d4dd062a102ccac100cc8888087795ccae6c9bae02af8cc.json  query-9c6e625cf3e3c926725b8d6c6a6bc508eef0c172a54af58ea926179cd9c5aa37.json  query-a4b1fe62c012dcddc5a35aa4cc35876adb29912ab3c123063adf2cfe68b2f85d.json  query-a9ab386ccd481980d187e66f6a2d3656569b03b3126af9e765c7693ca623b6cd.json  query-b6a0cc98968b2b5b919ed5b71ccc61f2a1d20fd1416a52e1872358b22ab42349.json  query-ceb950441d2f47da8f1f68b28621f24169d2b0d479d35f6a1f146b82d47fbf6c.json  query-d200180141c4357bf55ef5aa01f4f968d037bffbf4783d99944b30b8e86bccde.json  query-d321ad0e1d3e09d2ae0c287b89f0b4b7aa9f96332f4a43d7e87ff30c0a0ad0b3.json  query-e6a9752fb5c0d41c49799f51e01e3a3b09647971f4db102c597e648a5add9874.json  query-eaf17a66f4b59ed97c34da7dd32e1cc0f9f72d7c8dfd555033ecd0a33839783e.json  query-f333496a08f55fea1f0473f375be47f4eea52b2f198d3e5a360f31464e005418.json  query-fa2bf266ad47f9b80af8b44615f36d88f35924ef9283644f1fc706c9b32ef151.json
frontend/arkdice/: .env  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/arkdice/src/: App.css  App.tsx  vite-env.d.ts
frontend/arkdice/src/components/: ActivityFeed.tsx  ArkDice.tsx  BitcoinAddressSection.tsx  InfoDisplay.tsx  MultiplierSlider.tsx  Navbar.tsx  home.tsx
frontend/arkdice/src/config/: betting.ts
frontend/arkdice/src/hooks/: useGameWebSocket.ts
frontend/arkdice/src/services/: api.ts  gameService.ts  websocket.ts
frontend/arkdice/src/types/: game.ts
frontend/bridge/: LICENSE  README.md  package.json  pnpm-lock.yaml
frontend/bridge/src/: client.ts  index.ts  provider.ts  types.ts
frontend/satsday/: index.html  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/satsday/src/: App.tsx  index.css
frontend/satsday/src/components/: ActivityFeed.tsx  Footer.tsx  GameHero.tsx  GamesOverview.tsx  HowItWorks.tsx  Navbar.tsx
frontend/satsday/src/components/ui/: button.tsx  sonner.tsx
frontend/satsday/src/hooks/: useGameWebSocket.ts  useWalletBridge.ts
frontend/satsday/src/pages/: Game.tsx  GameVerify.tsx  HowItWorks.tsx  Index.tsx  SatoshisNumber.tsx  Terms.tsx
frontend/satsday/src/services/: api.ts  gameService.ts  websocket.ts
frontend/satsday/src/types/: game.ts
migrations/: 20250724112747_nonces.up.sql  20250725112621_game_results.up.sql  20250725134705_own_transactions.down.sql  20250725134705_own_transactions.up.sql  20250729205307_add_multiplier_to_game_results.down.sql  20250729205307_add_multiplier_to_game_results.up.sql  20251113111302_telegram_registration.down.sql  20251113111302_telegram_registration.up.sql
src/: client.rs  config.rs  db.rs  esplora.rs  key_derivation.rs  lib.rs  logger.rs  nonce_service.rs  recovery.rs  server.rs  telegram.rs  transaction_processor.rs  utils.rs  websocket.rs
src/client/: send_vtxo.rs  settle.rs
src/games/: mod.rs  satoshis_number.rs
