[package]
name = "satoshi_dice"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "satoshi_dice"
path = "src/bin/ark-cli.rs"

[dependencies]
anyhow = "1"
ark-core = { git = "https://github.com/arkade-os/rust-sdk.git", rev = "8640e79278b235398964ab0dfd0f7b1fc37b9fd5" }
ark-grpc = { git = "https://github.com/arkade-os/rust-sdk.git", rev = "8640e79278b235398964ab0dfd0f7b1fc37b9fd5" }
async-stream = "0.3"
atty = "0.2.14"
axum = { version = "0.8", features = ["ws"] }
backon = { version = "1", features = ["tokio-sleep"] }
bitcoin = { version = "0.32.4", features = ["rand", "serde"] }
clap = { version = "4", features = ["derive"] }
esplora-client = { version = "0.10.0", features = ["async-https", "blocking-https"] }
futures = "0.3"
futures-util = "0.3"
hex = "0.4.3"
rand = "0.8.5"
rayon = "1.10"
rustls = { version = "0.23", features = ["ring"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10.8"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "time"] }
teloxide = { version = "0.13", features = ["macros"] }
time = { version = "0.3", features = ["macros", "serde", "serde-well-known"] }
tokio = { version = "1.41.0", features = ["full"] }
toml = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi", "env-filter", "time", "tracing-log", "json"] }

[build-dependencies]
chrono = "0.4"

[patch.crates-io]
secp256k1-zkp = { git = "https://github.com/sanket1729/rust-secp256k1-zkp", rev = "60e631c24588a0c9e271badd61959294848c665d" }
